# metaplain

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
app/: datastore.py  fileStore.py  main.py
src/: datastore.py  filestore.py  main.py  sql_dbstore.py  web3store.py  workflow.py
tests/: memory:  nft_metadata_sample.json  test_DataStore.py  test_dbstore.py  test_filestore.py  test_main.py
