[tool.poetry]
name = "solidago"
version = "0.1.0"
description = ""
authors = ["Dr. Nobel Khandaker <nobel@huskers.unl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
