[tool.poetry]
name = "solidago"
version = "0.1.0"
description = ""
authors = ["Dr. Nobel Khandaker <nobel@huskers.unl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
fastapi = "^0.88.0"
httpx = "^0.23.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.44"
logging = "^0.4.9.6"
pyflakes = "^3.0.1"
aiofiles = "^22.1.0"
pytest-asyncio = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
